--- a/.github/workflows/golangci.yml
+++ b/.github/workflows/golangci.yml
@@ -11,12 +11,11 @@ jobs:
     name: golangci-lint
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/setup-go@v3
+        with:
+          go-version: '>=1.19'
+      - uses: actions/checkout@v3
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          golangci_lint_flags: "--config=./.golangci.yml ./..."
-          fail_on_error: true
-          reporter: "github-pr-review"
+          version: v1.29
