--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,12 +10,10 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Setup
-        uses: actions/setup-go@v3
+      - uses: actions/setup-go@v3
         with:
           go-version: '>=1.19'
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
       - name: Test
         run: go test ./... -coverprofile=coverage.out
       - name: Report coverage.out
